@@ -114,11 +114,6 @@
   </tr>\n
   <tr>\n
     <td>verifyTextPresent</td>\n
-    <td>Hello</td>\n
-    <td></td>\n
-  </tr>\n
-  <tr>\n
-    <td>verifyTextPresent</td>\n
     <td>Installation steps</td>\n
     <td></td>\n
   </tr>\n
@@ -154,11 +149,6 @@
   <tr>\n
     <td>verifyTextPresent</td>\n
     <td>ERP5 Configuration</td>\n
-    <td></td>\n
-  </tr>\n
-  <tr>\n
-    <td>verifyTextPresent</td>\n
-    <td>Hello</td>\n
     <td></td>\n
   </tr>\n
   <tr>\n
